@@ -901,6 +901,12 @@
                 set.</td>
             </tr>
             <tr>
+                <td>overwriteChanges</td>
+                <td>No</td>
+                <td>If set to true the update command will include the -C option
+                which will overwrite local changes.</td>
+            </tr>
+            <tr>
                 <td>resetStickyTags</td>
                 <td>No</td>
                 <td>If set to true the update command will include the -A option
